--- a/app/templates/company_profile.html
+++ b/app/templates/company_profile.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Company Profile</h1>
+    <h1 class="text-center">Company Profile</h1>
     <div class="row">
 		<div class="col-md-3"></div>
         <div class="col-md-6">
