--- a/app/templates/inventory_management/inventory_overview_sample.html
+++ b/app/templates/inventory_management/inventory_overview_sample.html
@@ -37,21 +37,21 @@
 	<li>Once inside the Inventory Management page, click on Departments tab.</li>
 	<ol>
 		<li>Register supplies department name (e.g. Biochemistry, Hematology, Microbiology, etc.).</li>
-		<li>Register supplies type (e.g. Reagent, Control, Calibrator, etc.)</li>
+		<li>Some basic departments are auto completed.</li>
 	</ol>
 	<li>Click on Suppliers tab.</li>
 	<ol>
 		<li>Click on register supplier.</li>
 		<li>Fill out supplier details.</li>
 	</ol>
-	<li>Click on products tab.</li>
+	<li>Click on Supplies tab.</li>
 	<ol>
-		<li>Click on register product.</li>
+		<li>Click on register supplies.</li>
 		<li>Type product reference number.</li>
 		<li>If product is already registered in our database, reference number will show.</li>
-		<li>Click on the reference number to auto populate item name, description and storage requirement.</li>
-		<li>Fill out other details as per your companys data and click register.</li>
-		<li>Do this for all your companys inventory supplies.</li>
+		<li>Click on the reference number to auto populate item name, description and storage requirement and type.</li>
+		<li>Fill out other details as per your company's data and click register.</li>
+		<li>Do this for all your company's inventory supplies.</li>
 	</ol>
 </ol>
 {% endblock %}
