--- a/app/templates/lab_document.html
+++ b/app/templates/lab_document.html
@@ -147,7 +147,15 @@
 
 	.main_body ol {
 		counter-reset: item;
-		padding-left: 15px;
+		#padding-left: 15px;
+	}
+
+	article ol {
+		padding-left: 5px;
+	}
+
+	article ol li ol li::before {
+		padding-left: 0px;
 	}
 
 	.main_body li {
@@ -158,7 +166,7 @@
 		content: counters(item, ".") ". ";
 		counter-increment: item;
 		display: table-cell;
-		padding-left: 10px;
+		#padding-left: 10px;
 		padding-right: 10px;
 	}
 	
