--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -138,7 +138,12 @@
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.14.3/xlsx.full.min.js"></script>
-	
+	<!--for qz tray barcode printing-->
+	<meta charset="UTF-8">
+	<script type="text/javascript" charset="UTF-8" src="/static/js/qz_tray/dependencies/rsvp-3.1.0.min.js"></script>
+	<script type="text/javascript" charset="UTF-8" src="/static/js/qz_tray/dependencies/sha-256.min.js"></script>
+	<script type="text/javascript" charset="UTF-8" src="/static/js/qz_tray/qz-tray.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js" integrity="sha256-w6/1B0uwkpR3uX0YUw3k2zzHnq6xDNdVZHLIdz8xV6I=" crossorigin="anonymous"></script>
 	<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script-->
 	<link rel="shortcut icon" href="/static/logo.jpg">
 {% endblock %}
