--- a/app/templates/inventory_management/inventory_overview.html
+++ b/app/templates/inventory_management/inventory_overview.html
@@ -35,7 +35,7 @@
 				{% for my_s in my_supplies %}
 				{% if my_s.less_quantity %}
 				{% for i in my_s.item_query %}
-				<tr id="{{ my_s.product.ref_number }}_less_qty_{{ i.lot.lot_no }}_{{ i.department.name }}" class="my_products_row">
+				<tr id="{{ my_s.product.ref_number }}_less_qty_{{ i.department.name }}" class="my_products_row">
 					<td>{{ my_s.product.ref_number }}</td>
 					<td>{{ my_s.product.name }}</td>
 					<td>{{ i.department.name }}</td>
