--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,9 @@
 					{{ nav_link('calculators', 'Calculators') }}
 					{{ nav_link('quality_control_sample', 'Quality Control') }}
 					{{ nav_link('guides', 'Guides') }}
-					
+					{% if current_user == superuser %}
+					{{ nav_link('stream', 'Stream')}}
+					{% endif %}
 					{% if current_user.is_authenticated %}
 					{% if users %}
 					<li><input type="text" class="form-control" id="search_bar" placeholder="Search" style="margin-top: 10px;"></li>
